; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_hevcdsp_msa.c_hevc_hv_4t_8multx4_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_hevcdsp_msa.c_hevc_hv_4t_8multx4_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ff_hevc_mask_arr = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i64, i32*, i64, i32*, i32*, i64)* @hevc_hv_4t_8multx4_msa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hevc_hv_4t_8multx4_msa(i32* %0, i64 %1, i32* %2, i64 %3, i32* %4, i32* %5, i64 %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i64, align 8
  %15 = alloca i64, align 8
  %16 = alloca i64, align 8
  %17 = alloca i64, align 8
  %18 = alloca i64, align 8
  %19 = alloca i64, align 8
  %20 = alloca i64, align 8
  %21 = alloca i64, align 8
  %22 = alloca i64, align 8
  %23 = alloca i64, align 8
  %24 = alloca i64, align 8
  %25 = alloca i64, align 8
  %26 = alloca i64, align 8
  %27 = alloca i64, align 8
  %28 = alloca i64, align 8
  %29 = alloca i64, align 8
  %30 = alloca i64, align 8
  %31 = alloca i64, align 8
  %32 = alloca i64, align 8
  %33 = alloca i32, align 4
  %34 = alloca i32, align 4
  %35 = alloca i32, align 4
  %36 = alloca i32, align 4
  %37 = alloca i32, align 4
  %38 = alloca i32, align 4
  %39 = alloca i32, align 4
  %40 = alloca i32, align 4
  %41 = alloca i32, align 4
  %42 = alloca i32, align 4
  %43 = alloca i32, align 4
  %44 = alloca i32, align 4
  %45 = alloca i32, align 4
  %46 = alloca i32, align 4
  %47 = alloca i32, align 4
  %48 = alloca i32, align 4
  %49 = alloca i32, align 4
  %50 = alloca i32, align 4
  %51 = alloca i32, align 4
  %52 = alloca i32, align 4
  %53 = alloca i32, align 4
  %54 = alloca i32, align 4
  %55 = alloca i32, align 4
  %56 = alloca i32, align 4
  %57 = alloca i32, align 4
  %58 = alloca i32, align 4
  %59 = alloca i32, align 4
  %60 = alloca i32, align 4
  %61 = alloca i32, align 4
  %62 = alloca i32, align 4
  %63 = alloca i32, align 4
  %64 = alloca i32, align 4
  %65 = alloca i32, align 4
  store i32* %0, i32** %8, align 8
  store i64 %1, i64* %9, align 8
  store i32* %2, i32** %10, align 8
  store i64 %3, i64* %11, align 8
  store i32* %4, i32** %12, align 8
  store i32* %5, i32** %13, align 8
  store i64 %6, i64* %14, align 8
  %66 = load i64, i64* %9, align 8
  %67 = add nsw i64 %66, 1
  %68 = load i32*, i32** %8, align 8
  %69 = sub i64 0, %67
  %70 = getelementptr inbounds i32, i32* %68, i64 %69
  store i32* %70, i32** %8, align 8
  %71 = load i32*, i32** %12, align 8
  %72 = call i32 @LD_SH(i32* %71)
  store i32 %72, i32* %37, align 4
  %73 = load i32, i32* %37, align 4
  %74 = load i32, i32* %33, align 4
  %75 = load i32, i32* %34, align 4
  %76 = call i32 @SPLATI_H2_SH(i32 %73, i32 0, i32 1, i32 %74, i32 %75)
  %77 = load i32*, i32** %13, align 8
  %78 = call i32 @LD_SH(i32* %77)
  store i32 %78, i32* %37, align 4
  %79 = load i32, i32* %37, align 4
  %80 = load i32, i32* %37, align 4
  %81 = call i32 @UNPCK_R_SB_SH(i32 %79, i32 %80)
  %82 = load i32, i32* %37, align 4
  %83 = load i32, i32* %35, align 4
  %84 = load i32, i32* %36, align 4
  %85 = call i32 @SPLATI_W2_SH(i32 %82, i32 0, i32 %83, i32 %84)
  %86 = load i32, i32* @ff_hevc_mask_arr, align 4
  %87 = call i64 @LD_SB(i32 %86)
  store i64 %87, i64* %23, align 8
  %88 = load i64, i64* %23, align 8
  %89 = add nsw i64 %88, 2
  store i64 %89, i64* %24, align 8
  %90 = call i32 @__msa_ldi_h(i32 128)
  store i32 %90, i32* %38, align 4
  %91 = load i32, i32* %38, align 4
  %92 = shl i32 %91, 6
  store i32 %92, i32* %38, align 4
  %93 = load i64, i64* %14, align 8
  store i64 %93, i64* %15, align 8
  br label %94

94:                                               ; preds = %98, %7
  %95 = load i64, i64* %15, align 8
  %96 = add nsw i64 %95, -1
  store i64 %96, i64* %15, align 8
  %97 = icmp ne i64 %95, 0
  br i1 %97, label %98, label %341

98:                                               ; preds = %94
  %99 = load i32*, i32** %8, align 8
  %100 = load i64, i64* %9, align 8
  %101 = load i64, i64* %16, align 8
  %102 = load i64, i64* %17, align 8
  %103 = load i64, i64* %18, align 8
  %104 = load i64, i64* %19, align 8
  %105 = load i64, i64* %20, align 8
  %106 = load i64, i64* %21, align 8
  %107 = load i64, i64* %22, align 8
  %108 = call i32 @LD_SB7(i32* %99, i64 %100, i64 %101, i64 %102, i64 %103, i64 %104, i64 %105, i64 %106, i64 %107)
  %109 = load i32*, i32** %8, align 8
  %110 = getelementptr inbounds i32, i32* %109, i64 8
  store i32* %110, i32** %8, align 8
  %111 = load i64, i64* %16, align 8
  %112 = load i64, i64* %17, align 8
  %113 = load i64, i64* %18, align 8
  %114 = load i64, i64* %19, align 8
  %115 = load i64, i64* %20, align 8
  %116 = load i64, i64* %21, align 8
  %117 = load i64, i64* %22, align 8
  %118 = call i32 @XORI_B7_128_SB(i64 %111, i64 %112, i64 %113, i64 %114, i64 %115, i64 %116, i64 %117)
  %119 = load i64, i64* %16, align 8
  %120 = load i64, i64* %16, align 8
  %121 = load i64, i64* %16, align 8
  %122 = load i64, i64* %16, align 8
  %123 = load i64, i64* %23, align 8
  %124 = load i64, i64* %24, align 8
  %125 = load i64, i64* %25, align 8
  %126 = load i64, i64* %26, align 8
  %127 = call i32 @VSHF_B2_SB(i64 %119, i64 %120, i64 %121, i64 %122, i64 %123, i64 %124, i64 %125, i64 %126)
  %128 = load i64, i64* %17, align 8
  %129 = load i64, i64* %17, align 8
  %130 = load i64, i64* %17, align 8
  %131 = load i64, i64* %17, align 8
  %132 = load i64, i64* %23, align 8
  %133 = load i64, i64* %24, align 8
  %134 = load i64, i64* %27, align 8
  %135 = load i64, i64* %28, align 8
  %136 = call i32 @VSHF_B2_SB(i64 %128, i64 %129, i64 %130, i64 %131, i64 %132, i64 %133, i64 %134, i64 %135)
  %137 = load i64, i64* %18, align 8
  %138 = load i64, i64* %18, align 8
  %139 = load i64, i64* %18, align 8
  %140 = load i64, i64* %18, align 8
  %141 = load i64, i64* %23, align 8
  %142 = load i64, i64* %24, align 8
  %143 = load i64, i64* %29, align 8
  %144 = load i64, i64* %30, align 8
  %145 = call i32 @VSHF_B2_SB(i64 %137, i64 %138, i64 %139, i64 %140, i64 %141, i64 %142, i64 %143, i64 %144)
  %146 = load i32, i32* %38, align 4
  store i32 %146, i32* %39, align 4
  %147 = load i32, i32* %38, align 4
  store i32 %147, i32* %40, align 4
  %148 = load i32, i32* %38, align 4
  store i32 %148, i32* %41, align 4
  %149 = load i64, i64* %25, align 8
  %150 = load i64, i64* %26, align 8
  %151 = load i32, i32* %33, align 4
  %152 = load i32, i32* %34, align 4
  %153 = load i32, i32* %39, align 4
  %154 = load i32, i32* %39, align 4
  %155 = call i32 @DPADD_SB2_SH(i64 %149, i64 %150, i32 %151, i32 %152, i32 %153, i32 %154)
  %156 = load i64, i64* %27, align 8
  %157 = load i64, i64* %28, align 8
  %158 = load i32, i32* %33, align 4
  %159 = load i32, i32* %34, align 4
  %160 = load i32, i32* %40, align 4
  %161 = load i32, i32* %40, align 4
  %162 = call i32 @DPADD_SB2_SH(i64 %156, i64 %157, i32 %158, i32 %159, i32 %160, i32 %161)
  %163 = load i64, i64* %29, align 8
  %164 = load i64, i64* %30, align 8
  %165 = load i32, i32* %33, align 4
  %166 = load i32, i32* %34, align 4
  %167 = load i32, i32* %41, align 4
  %168 = load i32, i32* %41, align 4
  %169 = call i32 @DPADD_SB2_SH(i64 %163, i64 %164, i32 %165, i32 %166, i32 %167, i32 %168)
  %170 = load i32, i32* %40, align 4
  %171 = load i32, i32* %39, align 4
  %172 = load i32, i32* %46, align 4
  %173 = load i32, i32* %52, align 4
  %174 = call i32 @ILVRL_H2_SH(i32 %170, i32 %171, i32 %172, i32 %173)
  %175 = load i32, i32* %41, align 4
  %176 = load i32, i32* %40, align 4
  %177 = load i32, i32* %49, align 4
  %178 = load i32, i32* %55, align 4
  %179 = call i32 @ILVRL_H2_SH(i32 %175, i32 %176, i32 %177, i32 %178)
  %180 = load i64, i64* %19, align 8
  %181 = load i64, i64* %19, align 8
  %182 = load i64, i64* %19, align 8
  %183 = load i64, i64* %19, align 8
  %184 = load i64, i64* %23, align 8
  %185 = load i64, i64* %24, align 8
  %186 = load i64, i64* %25, align 8
  %187 = load i64, i64* %26, align 8
  %188 = call i32 @VSHF_B2_SB(i64 %180, i64 %181, i64 %182, i64 %183, i64 %184, i64 %185, i64 %186, i64 %187)
  %189 = load i64, i64* %20, align 8
  %190 = load i64, i64* %20, align 8
  %191 = load i64, i64* %20, align 8
  %192 = load i64, i64* %20, align 8
  %193 = load i64, i64* %23, align 8
  %194 = load i64, i64* %24, align 8
  %195 = load i64, i64* %27, align 8
  %196 = load i64, i64* %28, align 8
  %197 = call i32 @VSHF_B2_SB(i64 %189, i64 %190, i64 %191, i64 %192, i64 %193, i64 %194, i64 %195, i64 %196)
  %198 = load i64, i64* %21, align 8
  %199 = load i64, i64* %21, align 8
  %200 = load i64, i64* %21, align 8
  %201 = load i64, i64* %21, align 8
  %202 = load i64, i64* %23, align 8
  %203 = load i64, i64* %24, align 8
  %204 = load i64, i64* %29, align 8
  %205 = load i64, i64* %30, align 8
  %206 = call i32 @VSHF_B2_SB(i64 %198, i64 %199, i64 %200, i64 %201, i64 %202, i64 %203, i64 %204, i64 %205)
  %207 = load i64, i64* %22, align 8
  %208 = load i64, i64* %22, align 8
  %209 = load i64, i64* %22, align 8
  %210 = load i64, i64* %22, align 8
  %211 = load i64, i64* %23, align 8
  %212 = load i64, i64* %24, align 8
  %213 = load i64, i64* %31, align 8
  %214 = load i64, i64* %32, align 8
  %215 = call i32 @VSHF_B2_SB(i64 %207, i64 %208, i64 %209, i64 %210, i64 %211, i64 %212, i64 %213, i64 %214)
  %216 = load i32, i32* %38, align 4
  store i32 %216, i32* %42, align 4
  %217 = load i32, i32* %38, align 4
  store i32 %217, i32* %43, align 4
  %218 = load i32, i32* %38, align 4
  store i32 %218, i32* %44, align 4
  %219 = load i32, i32* %38, align 4
  store i32 %219, i32* %45, align 4
  %220 = load i64, i64* %25, align 8
  %221 = load i64, i64* %26, align 8
  %222 = load i32, i32* %33, align 4
  %223 = load i32, i32* %34, align 4
  %224 = load i32, i32* %42, align 4
  %225 = load i32, i32* %42, align 4
  %226 = call i32 @DPADD_SB2_SH(i64 %220, i64 %221, i32 %222, i32 %223, i32 %224, i32 %225)
  %227 = load i64, i64* %27, align 8
  %228 = load i64, i64* %28, align 8
  %229 = load i32, i32* %33, align 4
  %230 = load i32, i32* %34, align 4
  %231 = load i32, i32* %43, align 4
  %232 = load i32, i32* %43, align 4
  %233 = call i32 @DPADD_SB2_SH(i64 %227, i64 %228, i32 %229, i32 %230, i32 %231, i32 %232)
  %234 = load i64, i64* %29, align 8
  %235 = load i64, i64* %30, align 8
  %236 = load i32, i32* %33, align 4
  %237 = load i32, i32* %34, align 4
  %238 = load i32, i32* %44, align 4
  %239 = load i32, i32* %44, align 4
  %240 = call i32 @DPADD_SB2_SH(i64 %234, i64 %235, i32 %236, i32 %237, i32 %238, i32 %239)
  %241 = load i64, i64* %31, align 8
  %242 = load i64, i64* %32, align 8
  %243 = load i32, i32* %33, align 4
  %244 = load i32, i32* %34, align 4
  %245 = load i32, i32* %45, align 4
  %246 = load i32, i32* %45, align 4
  %247 = call i32 @DPADD_SB2_SH(i64 %241, i64 %242, i32 %243, i32 %244, i32 %245, i32 %246)
  %248 = load i32, i32* %42, align 4
  %249 = load i32, i32* %41, align 4
  %250 = load i32, i32* %47, align 4
  %251 = load i32, i32* %53, align 4
  %252 = call i32 @ILVRL_H2_SH(i32 %248, i32 %249, i32 %250, i32 %251)
  %253 = load i32, i32* %43, align 4
  %254 = load i32, i32* %42, align 4
  %255 = load i32, i32* %50, align 4
  %256 = load i32, i32* %56, align 4
  %257 = call i32 @ILVRL_H2_SH(i32 %253, i32 %254, i32 %255, i32 %256)
  %258 = load i32, i32* %44, align 4
  %259 = load i32, i32* %43, align 4
  %260 = load i32, i32* %48, align 4
  %261 = load i32, i32* %54, align 4
  %262 = call i32 @ILVRL_H2_SH(i32 %258, i32 %259, i32 %260, i32 %261)
  %263 = load i32, i32* %45, align 4
  %264 = load i32, i32* %44, align 4
  %265 = load i32, i32* %51, align 4
  %266 = load i32, i32* %57, align 4
  %267 = call i32 @ILVRL_H2_SH(i32 %263, i32 %264, i32 %265, i32 %266)
  %268 = load i32, i32* %46, align 4
  %269 = load i32, i32* %47, align 4
  %270 = load i32, i32* %35, align 4
  %271 = load i32, i32* %36, align 4
  %272 = call i32 @HEVC_FILT_4TAP(i32 %268, i32 %269, i32 %270, i32 %271)
  store i32 %272, i32* %58, align 4
  %273 = load i32, i32* %52, align 4
  %274 = load i32, i32* %53, align 4
  %275 = load i32, i32* %35, align 4
  %276 = load i32, i32* %36, align 4
  %277 = call i32 @HEVC_FILT_4TAP(i32 %273, i32 %274, i32 %275, i32 %276)
  store i32 %277, i32* %59, align 4
  %278 = load i32, i32* %49, align 4
  %279 = load i32, i32* %50, align 4
  %280 = load i32, i32* %35, align 4
  %281 = load i32, i32* %36, align 4
  %282 = call i32 @HEVC_FILT_4TAP(i32 %278, i32 %279, i32 %280, i32 %281)
  store i32 %282, i32* %60, align 4
  %283 = load i32, i32* %55, align 4
  %284 = load i32, i32* %56, align 4
  %285 = load i32, i32* %35, align 4
  %286 = load i32, i32* %36, align 4
  %287 = call i32 @HEVC_FILT_4TAP(i32 %283, i32 %284, i32 %285, i32 %286)
  store i32 %287, i32* %61, align 4
  %288 = load i32, i32* %47, align 4
  %289 = load i32, i32* %48, align 4
  %290 = load i32, i32* %35, align 4
  %291 = load i32, i32* %36, align 4
  %292 = call i32 @HEVC_FILT_4TAP(i32 %288, i32 %289, i32 %290, i32 %291)
  store i32 %292, i32* %62, align 4
  %293 = load i32, i32* %53, align 4
  %294 = load i32, i32* %54, align 4
  %295 = load i32, i32* %35, align 4
  %296 = load i32, i32* %36, align 4
  %297 = call i32 @HEVC_FILT_4TAP(i32 %293, i32 %294, i32 %295, i32 %296)
  store i32 %297, i32* %63, align 4
  %298 = load i32, i32* %50, align 4
  %299 = load i32, i32* %51, align 4
  %300 = load i32, i32* %35, align 4
  %301 = load i32, i32* %36, align 4
  %302 = call i32 @HEVC_FILT_4TAP(i32 %298, i32 %299, i32 %300, i32 %301)
  store i32 %302, i32* %64, align 4
  %303 = load i32, i32* %56, align 4
  %304 = load i32, i32* %57, align 4
  %305 = load i32, i32* %35, align 4
  %306 = load i32, i32* %36, align 4
  %307 = call i32 @HEVC_FILT_4TAP(i32 %303, i32 %304, i32 %305, i32 %306)
  store i32 %307, i32* %65, align 4
  %308 = load i32, i32* %58, align 4
  %309 = load i32, i32* %59, align 4
  %310 = load i32, i32* %60, align 4
  %311 = load i32, i32* %61, align 4
  %312 = call i32 @SRA_4V(i32 %308, i32 %309, i32 %310, i32 %311, i32 6)
  %313 = load i32, i32* %62, align 4
  %314 = load i32, i32* %63, align 4
  %315 = load i32, i32* %64, align 4
  %316 = load i32, i32* %65, align 4
  %317 = call i32 @SRA_4V(i32 %313, i32 %314, i32 %315, i32 %316, i32 6)
  %318 = load i32, i32* %59, align 4
  %319 = load i32, i32* %58, align 4
  %320 = load i32, i32* %61, align 4
  %321 = load i32, i32* %60, align 4
  %322 = load i32, i32* %58, align 4
  %323 = load i32, i32* %60, align 4
  %324 = call i32 @PCKEV_H2_SW(i32 %318, i32 %319, i32 %320, i32 %321, i32 %322, i32 %323)
  %325 = load i32, i32* %63, align 4
  %326 = load i32, i32* %62, align 4
  %327 = load i32, i32* %65, align 4
  %328 = load i32, i32* %64, align 4
  %329 = load i32, i32* %62, align 4
  %330 = load i32, i32* %64, align 4
  %331 = call i32 @PCKEV_H2_SW(i32 %325, i32 %326, i32 %327, i32 %328, i32 %329, i32 %330)
  %332 = load i32, i32* %58, align 4
  %333 = load i32, i32* %60, align 4
  %334 = load i32, i32* %62, align 4
  %335 = load i32, i32* %64, align 4
  %336 = load i32*, i32** %10, align 8
  %337 = load i64, i64* %11, align 8
  %338 = call i32 @ST_SW4(i32 %332, i32 %333, i32 %334, i32 %335, i32* %336, i64 %337)
  %339 = load i32*, i32** %10, align 8
  %340 = getelementptr inbounds i32, i32* %339, i64 8
  store i32* %340, i32** %10, align 8
  br label %94

341:                                              ; preds = %94
  ret void
}

declare dso_local i32 @LD_SH(i32*) #1

declare dso_local i32 @SPLATI_H2_SH(i32, i32, i32, i32, i32) #1

declare dso_local i32 @UNPCK_R_SB_SH(i32, i32) #1

declare dso_local i32 @SPLATI_W2_SH(i32, i32, i32, i32) #1

declare dso_local i64 @LD_SB(i32) #1

declare dso_local i32 @__msa_ldi_h(i32) #1

declare dso_local i32 @LD_SB7(i32*, i64, i64, i64, i64, i64, i64, i64, i64) #1

declare dso_local i32 @XORI_B7_128_SB(i64, i64, i64, i64, i64, i64, i64) #1

declare dso_local i32 @VSHF_B2_SB(i64, i64, i64, i64, i64, i64, i64, i64) #1

declare dso_local i32 @DPADD_SB2_SH(i64, i64, i32, i32, i32, i32) #1

declare dso_local i32 @ILVRL_H2_SH(i32, i32, i32, i32) #1

declare dso_local i32 @HEVC_FILT_4TAP(i32, i32, i32, i32) #1

declare dso_local i32 @SRA_4V(i32, i32, i32, i32, i32) #1

declare dso_local i32 @PCKEV_H2_SW(i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @ST_SW4(i32, i32, i32, i32, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
